update styles.css file
update styles.css file

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 STYLES.CSS
 
 Course:  Bootstrap 4 Quick Start
-Author:  Brad Hussey
-Website: bradhussey.ca
+Author:  Steven Tanner
+Website: www.steventanner04.com
 */
 
 html,
